# LHM

./: .env.example  .gitignore  CONSOLIDATION_ANSWER.md  CONSOLIDATION_SUMMARY.md  Master_Index.ipynb  PILLAR 10 PLUMBING.md  README.md  requirements.txt  setup.py  stripe_backup_code_jan2026.txt  z_roc_indicator.md
.github/: copilot-instructions.md
Archive/: calendar  (+1 more)
Archive/projects/lighthouse-macro/: .gitignore  CHART_FIX_SUMMARY.md  MULTI_MODEL_SETUP.md  QUICKSTART.md  README.md  REALISTIC_SETUP.md  SYSTEM_SUMMARY.md  YOUR_ACTUAL_SETUP.md  cli.py  pyproject.toml
Archive/projects/lighthouse-macro/charts/: horizon_charts.py
Archive/projects/lighthouse-macro/configs/: ai_routing.yaml  charting.yaml  series.yaml
Archive/projects/lighthouse-macro/docs/: AI_MODELS_ASSESSMENT.md  BACKGROUND_AUTOMATION.md  DATA_PIPELINE_GUIDE.md  DATA_STRATEGY.md  LOCAL_VS_CLOUD.md  MULTI_MODEL_AI.md  SETUP.md  USAGE.md  WHAT_WAS_BUILT.md
Archive/projects/lighthouse-macro/examples/: beacon_chart_example.py  hybrid_workflow_example.py
Archive/projects/lighthouse-macro/notebooks/: quickstart.ipynb
Archive/projects/lighthouse-macro/scripts/: beacon_macro_dashboard.py  collect.py  generate_beacon_charts.py  generate_beacon_simple.py  horizon_chart_refresh.py  horizon_charts_v2.py  test_chart.py  test_colors.py
Archive/projects/lighthouse-macro/src/ai/: __init__.py  app_workflows.py  claude.py  gemini.py  grok.py  openai.py  perplexity.py  router.py  workflows.py
Archive/projects/lighthouse-macro/src/charting/: __init__.py  standards.py
Archive/projects/lighthouse-macro/src/collectors/: __init__.py  base.py  fred.py  universal.py
Archive/projects/lighthouse-macro/src/core/: __init__.py  config.py
(+575 files in other folders)
